# Particulate

./: .gitignore  CMakeLists.txt  README.md  config.json
dep/: CMakeLists.txt  demo.cpp
dep/include/: config.h  matrix.h  mesh.h  quaternion.h  state.h  triangle.h  vertex.h
dep/src/: main.c  matrix.c  mesh.c  quaternion.c  state.c  triangle.c  vertex.c
include/: camera.hpp  config.hpp  grid_plane.hpp  layer.hpp  particle.hpp  particle_system.hpp  scene.hpp  simple_particle.hpp  state.hpp  triangle.hpp  vertex.hpp
src/: grid_plane.cpp  main.cpp  particle_system.cpp  simple_particle.cpp  state.cpp
